dist/openshift/templates/02-apicurio-registry-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apicurio-registry
  labels:
    app: apicurio-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      name: registry
  template:
    metadata:
      labels:
        app: apicurio-registry
        name: registry
    spec:
      containers:
        - name: apicurio-registry
          image: quay.io/apicurio/apicurio-registry-sql:multitenant-sr-demo-snapshot
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 1300Mi
            requests:
              cpu: 200m
              memory: 600Mi
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
  strategy:
    type: Recreate
---
# Services for the components
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apicurio-registry
    template: apicurio-registry
  name: apicurio-registry
spec:
  selector:
    app: apicurio-registry
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
status:
  loadBalancer: {}

---
# Route
apiVersion: v1
kind: Route
metadata:
  name: apicurio-registry
  labels:
    app: apicurio-registry
    template: apicurio-registry
spec:
  to:
    kind: Service
    name: apicurio-registry
    weight: 100
  wildcardPolicy: None

---
