dist/openshift/templates/02-service-api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-api
  labels:
    app: service-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-api
  template:
    metadata:
      labels:
        app: service-api
    spec:
      containers:
        - image: quay.io/famargon/control-plane-service-api:latest
          imagePullPolicy: Always
          name: service-api
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 200m
              memory: 600Mi
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
  strategy:
    type: Recreate
---
# Services for the components
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-api
    template: service-api
  name: service-api
spec:
  selector:
    app: service-api
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
status:
  loadBalancer: {}

---
# Route
apiVersion: v1
kind: Route
metadata:
  name: service-api
  labels:
    app: service-api
    template: service-api
spec:
  to:
    kind: Service
    name: service-api
    weight: 100
  wildcardPolicy: None

---
